Prepare reservation service
