# src/server/routes/reservation/reservation.js
@@ -1,8 +1,0 @@
-import express from "express";
-import getUserReservationById from "../../../services/reservation/getUserReservationById.js";
-
-const router = express.Router();
-
-router.get("/:userId", getUserReservationById);
-
-export default router;
